Fix components/home/Integrate.tsx component by changing tabs to a carousel with adaptive height to prevent height flickering between slide changes

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -86,9 +86,9 @@ a {
   }
 }
 
-.platformSlider {
+.slick-slider {
   .slick-dots {
-    bottom: -60px;
+    // bottom: -60px;
     li {
       width: 8px;
       height: 8px;
